--- a/health_web/src/main/webapp/pages/main.html
+++ b/health_web/src/main/webapp/pages/main.html
@@ -170,20 +170,52 @@
                     "children":[//是否有子菜单，若没有，则为[]
                         {
                             "path": "/5-1",
-                            "title": "工作量统计",
+                            "title": "会员数量",
                             "linkUrl":"all-medical-list.html",
                             "children":[]
                         },
                         {
                             "path": "/5-2",
-                            "title": "套餐饼图",
+                            "title": "套餐占比",
                             "linkUrl":"report_setmeal.html",
                             "children":[]
                         },
                         {
                             "path": "/5-3",
-                            "title": "表格",
+                            "title": "运营数据",
                             "linkUrl":"report_business.html",
+                            "children":[]
+                        }
+                    ]
+                },
+
+
+                {
+                    "path": "6",     //菜单项所对应的路由路径
+                    "title": "系统设置",     //菜单项名称
+                    "icon":"fa-heartbeat",
+                    "children":[//是否有子菜单，若没有，则为[]
+                        {
+                            "path": "/6-1",
+                            "title": "菜单管理",
+                            "linkUrl":"all-medical-list.html",
+                            "children":[]
+                        },
+                        {
+                            "path": "/6-2",
+                            "title": "权限管理",
+                            "linkUrl":"all-medical-list.html",
+                            "children":[]
+                        },
+                        {
+                            "path": "/6-3",
+                            "title": "角色管理",
+                            "linkUrl":"all-medical-list.html",
+                            "children":[]
+                        },{
+                            "path": "/6-4",
+                            "title": "用户管理",
+                            "linkUrl":"all-medical-list.html",
                             "children":[]
                         }
                     ]
